# Real-Time-2D-Object-Recognition

./: .gitignore  CMakeLists.txt  readme.md
include/: DataBase.hpp  Features.h  Segmentation.h  ThresholdAndClean.h  cvui.h
src/: DataBase.cpp  Main.cpp
